--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   google_fonts:
   ar_flutter_plugin: ^0.7.1
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
